# openPSTD

./: .gitignore  .travis.yml  AboutBoxesText.h  AppRun  CMakeCache.txt  CMakeLists.txt  Colors.cpp  Colors.h  DocumentSettings.cpp  DocumentSettings.h  DomainProperties.cpp  DomainProperties.h  DomainProperties.ui  Edges-test.cpp  Edges.cpp  Edges.h  GeneralTypes.h  GridLayer.cpp  GridLayer.h  IconLayer.cpp  IconLayer.h  Info.plist  InteractiveLayer.cpp  InteractiveLayer.h  InteractiveView.py  InvalidationData.cpp  InvalidationData.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_ui.py  Model.cpp  Model.h  MouseHandlers.cpp  MouseHandlers.h  MouseHandlers.py  PSTDFile.cpp  PSTDFile.h  PstdAlgorithm.cpp  PstdAlgorithm.h  (+60 more)
CLI/: CLI.cmake  edit-cli.cpp  edit-cli.h  edit.cpp  edit.h  exportCLI.cpp  exportCLI.h  main-cli.cpp  main-cli.h  main.cpp  main.h  output-cli.cpp  output-cli.h  output.cpp  output.h
GPU/: Debug2D.vert  Grid.frag.glsl  Grid.vert.glsl  Interactive.frag.glsl  Scene2D.frag  Scene2D.vert  Simulation2D.frag  Simulation2D.vert  Symbol.Geo.glsl  Symbol.frag.glsl  Symbol.vert.glsl  View2D.frag  View2D.vert
GUI/: AboutBoxesText.h  AddReceiverSpeaker.cpp  AddReceiverSpeaker.h  AddReceiverSpeaker.ui  ApplicationSettings.cpp  ApplicationSettings.h  ApplicationSettings.ui  DocumentSettings.cpp  DocumentSettings.h  DocumentSettings.ui  DomainProperties.cpp  DomainProperties.h  DomainProperties.ui  Edges.cpp  Edges.h  ExportImage.cpp  ExportImage.h  ExportImage.ui  GUI.cmake  GridLayer.cpp  GridLayer.h  IconLayer.cpp  IconLayer.h  InteractiveLayer.cpp  InteractiveLayer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  MouseHandlers.cpp  MouseHandlers.h  PstdAlgorithm.cpp  PstdAlgorithm.h  Resources.qrc  SceneLayer.cpp  SceneLayer.h  Settings.cpp  Settings.h  Snapping.cpp  (+5 more)
GUI/GPU/: Debug2D.frag  Debug2D.vert  Grid.frag  Grid.frag.glsl  Grid.vert  Interactive.frag  Interactive.vert  Line.geo.glsl  Line.geom  Scene2D.frag  Scene2D.vert  Simulation2D.frag  Simulation2D.vert  Symbol.frag  Symbol.geo.glsl  Symbol.geom  Symbol.vert  SymbolInternal.geo.glsl  SymbolInternal.geom  Text.frag  Text.frag.glsl  Text.vert  Text.vert.glsl
GUI/layers/: GridLayer.cpp  GridLayer.h  IconLayer.cpp  IconLayer.h  InteractiveLayer.cpp  InteractiveLayer.h  ResultsLayer.cpp  ResultsLayer.h  SceneLayer.cpp  SceneLayer.h
GUI/mouse/: MouseCreateDomainStrategy.cpp  MouseCreateDomainStrategy.h  MouseCreateSpeakerReceiverStrategy.cpp  MouseCreateSpeakerReceiverStrategy.h  MouseMoveSceneStrategy.cpp  MouseMoveSceneStrategy.h  MouseSelectStrategy.cpp  MouseSelectStrategy.h  (+3 more)
OpenPSTD-Backend/: CMakeLists.txt  argumentparser.cpp  argumentparser.h  configuration.h  createcommand.cpp  createcommand.h  editcommand.cpp  editcommand.h  fileio.cpp  fileio.h  listcommand.cpp  listcommand.h  main.cpp  runcommand.cpp  runcommand.h  scenevalidator.cpp  scenevalidator.h  settings.h  solver.cpp  solver.h  solverlib.cpp  solverlib.h
OpenPSTD-Backend/test/: testargumentparser.cpp  testcommand.cpp  testcommand.h  testcreatecommand.cpp  testeditcommand.cpp  testfileio.cpp  testlistcommand.cpp  testruncommand.cpp
build-openPSTD-Desktop_Qt_5_11_2_GCC_64bit-Debug/: moc_absorptiondialog.cpp  moc_coordinatedialog.cpp  moc_graphicsview.cpp  moc_sidebar.cpp  moc_simulator2.cpp  moc_window.cpp  qrc_resources.cpp  test_unqlite_journal  ui_absorptiondialog.h  ui_coordinatedialog.h  ui_window.h
build-openPSTD-Desktop_Qt_5_9_1_GCC_64bit-Debug/: moc_absorptiondialog.cpp  moc_coordinatedialog.cpp  moc_graphicsview.cpp  moc_predefs.h  moc_sidebar.cpp  moc_simulator2.cpp  moc_window.cpp  qrc_resources.cpp  ui_absorptiondialog.h  ui_window.h
docs/: Center Scene.docx  Doxyfile  DoxygenLayout.xml  Wall intersection.docx  class diagram v3.1.uxf  index.md  kernel.h  kernel_structure.h  namespaces.h  requirements.docx
export/: Export.cpp  Image.cpp  Image.h
installation/: AppRun  openPSTD
installation2/: libGLX.so.0  libQt5OpenGL.so.5  libQt5Test.so.5  libX11.so.6  libXau.so.6  libXdmcp.so.6  libaec.so.0  libboost_iostreams.so.1.68.0  libboost_program_options.so.1.68.0  libboost_thread.so.1.68.0  libbz2.so.1.0  libdl.so.2  libharfbuzz.so.0  libicuuc.so.62  libm.so.6  libpthread.so.0  libsystemd.so.0
kernel/: ConsoleOutput.cpp  ConsoleOutput.h  GeneralTypes.h  KernelFacade.cpp  KernelFacade.h  KernelInterface.cpp  KernelInterface.h  MockKernel.cpp  MockKernel.h  PSTDKernel.cpp  PSTDKernel.h  Solver.cpp  Solver.h  concurrent.py  cuda_kernels.cu  cuda_kernels32.cu  kernel.cmake  main.py  ocl_kernels.cl  ocl_kernels32.cl  pstd.py  sequential.py  solvers.py  util.py
lib/: libicui18n.so.62  libpthread.so.0
openPSTD/: absorptiondialog.cpp  absorptiondialog.h  absorptiondialog.ui  coordinatedialog.cpp  coordinatedialog.h  coordinatedialog.ui  domain.cpp  domain.h  eventhandler.cpp  eventhandler.h  eventhandler2.cpp  eventhandler2.h  eventlistener.cpp  eventlistener.h  frame.cpp  frame.h  graphicsview.cpp  graphicsview.h  grid.cpp  grid.h  keymaps.txt  main.cpp  mingw.thread.h  model.cpp  model.h  modelmanager.cpp  modelmanager.h  openPSTD.pro  point.cpp  point.h  receiver.cpp  receiver.h  renderer.cpp  renderer.h  resources.qrc  settings.cpp  settings.h  sidebar.cpp  sidebar.h  simulator.cpp  (+22 more)
operations/: BaseOperation.cpp  BaseOperation.h  BaseOperation.py  DebugOperations.py  EditOperations.cpp  EditOperations.h  EditOperations.py  FileOperations.cpp  FileOperations.h  InitializationOperation.cpp  InitializationOperation.h  MenuFileOperations.py  MouseHandlerOperations.py  MouseOperations.cpp  MouseOperations.h  SceneOperations.py  SelectDomainOperation.cpp  SelectDomainOperation.h  SelectionOperations.cpp  SelectionOperations.h  ViewOperations.cpp  ViewOperations.h  ViewOperations.py
profiling/: profile_simulation.py
shared/: Colors.cpp  Colors.h  InvalidationData.cpp  InvalidationData.h  PSTDFile.cpp  PSTDFile.h  PSTDFileAccess.cpp  PSTDFileAccess.h  locking_ptr.h  shared.cmake
test/: test.cmake
testdata/: surf_script.m
unqlite/: CMakeLists.txt  unqlite.c  unqlite.cmake  unqlite.h
(+218 files in other folders)
